samples/_failures_safe/1761321022_203b49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1cfec65.c: In function ‘main’:
./samples/SAFE/__tmp_e1cfec65.c:158:56: error: missing terminating " character
  158 |     printf("%-12s %-15s %-6s %-6s\n", "TYPE", "VALUE", "
      |                                                        ^
./samples/SAFE/__tmp_e1cfec65.c:158:5: error: expected expression at end of input
  158 |     printf("%-12s %-15s %-6s %-6s\n", "TYPE", "VALUE", "
      |     ^~~~~~
./samples/SAFE/__tmp_e1cfec65.c:158:5: error: expected declaration or statement at end of input
